# django-instagram-profile

./: .gitignore  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg
instagram/: admin.py  models.py  services.py  settings.py  urls.py  views.py
instagram/templates/instagram/: feed.html
instagram_profile/: __init__.py  admin.py  apps.py  client.py  models.py  profiles.py  services.py  settings.py  urls.py  views.py
instagram_profile/management/commands/: sync_instagram_posts.py
instagram_profile/migrations/: 0001_initial.py  0002_auto_20200629_1325.py  0003_auto_20201104_1451.py  0003_auto_20201105_1447.py  0004_auto_20201104_1621.py  0005_auto_20201104_1714.py  0006_auto_20201105_1059.py
instagram_profile/templates/admin/instagram_profile/: change_list_object_tools.html
instagram_profile/templates/admin/instagram_profile/post/: change_list.html
instagram_profile/templates/admin/instagram_profile/profile/: change_form.html
