[tool.poetry]
name = "django-instagram-profile"
version = "1.0.0"
description = "Django package to sync and display personal Instagram media"
authors = ["Viktor <vsybrex@gmail.com>", "Humphrey <humphrey@datalive.com.au>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.6"
Django = "^3.1.3"
requests = "^2.24.0"
Pillow = "^8.0.1"
configparser = "^5.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
